Fixed a bug and typos
when the indicator is at "01:00:00" and we press the minus seconds
button, nothing was happening.
desired behavior: "00:59:59"

--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@ QMenu::item:selected {
     background-color: #3daee9;
 }
 
-QPushButton[minesButton=true],
+QPushButton[minusButton=true],
 QPushButton[plusButton=true] {
     border: 1px transparent;
     padding: 5px;
@@ -17,17 +17,17 @@ QPushButton[plusButton=true] {
     margin-left: 6px;
 }
 
-QPushButton[minesButton=true]:hover,
+QPushButton[minusButton=true]:hover,
 QPushButton[plusButton=true]:hover {
     background-color: #CFCFCF;
 }
 
-QPushButton[minesButton=true]:pressed,
+QPushButton[minusButton=true]:pressed,
 QPushButton[plusButton=true]:pressed {
     background-color: #A1A1A1;
 }
 
-QPushButton[minesButton=true]{
+QPushButton[minusButton=true]{
     image: url(:/style/images/downArrow.png);
 }
 QPushButton[plusButton=true] {
